# drf-dynamic-serializers

./: .coveragerc  .gitignore  .travis.yml  README.rst  pytest.ini  requirements.txt  setup.cfg
docs/: requirements.txt
docs/source/: conf.py  configuration.rst  drf_dynamic_serializers.apps.rst  drf_dynamic_serializers.conf.rst  drf_dynamic_serializers.exceptions.rst  drf_dynamic_serializers.mixins.rst  drf_dynamic_serializers.rst  drf_dynamic_serializers.serializers.rst  drf_dynamic_serializers.views.rst  index.rst  installation.rst  modules.rst  usage.rst
drf_dynamic_serializers/: __init__.py  apps.py  conf.py  exceptions.py  mixins.py  serializers.py  views.py
examples/: serializer.py  view.py
tests/: settings.py  tests_mixins.py  tests_serializers.py  tests_views.py
