[metadata]
name = drf-dynamic-serializers
version = 1.0
url = https://github.com/csdenboer/drf-dynamic-serializers
author = Christian den Boer
description = Dynamic serializers for the Django REST Framework
long_description = file: README.rst
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Documentation = https://drf-dynamic-serializers.readthedocs.io/
    Source = https://github.com/csdenboer/drf-dynamic-serializers
    Tracker = https://github.com/csdenboer/drf-dynamic-serializers/issues

[options]
python_requires = >=3.6
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    django >= 2.2
    djangorestframework >= 3.10.3
    django-appconf >= 1.0.4

[tool:pytest]
minversion = 2.9.1
addopts = -r a --cov-report=term --cov-report=html
restpaths = tests

[coverage:run]
branch = true
source = aioredis,tests